# data-structures-1

./: CMakeLists.txt  README.md
1- Insertion Sort/: InsertionSort.c  InsertionSort.h  OneHundredThousand.c  OneMillion.c  TenThousand.c  one_hundred_thousand.out  one_million.out  ten_thousand.out
book projects/: how c functions works.c
classroom/: aula5-1.c  aula5-2.c  aula5.c  aula5.h
sorting algorithms/: README.md  a.out  b.out  create-array.c  insertion-sort.c  main.c  mylib.c  mylib.h  random-list.c  sortingalgorithms.txt
sorting algorithms/a/: InsertionSort.c  InsertionSort.h
sorting algorithms/files/: random-num-10000.out  random-num-100000.out
